--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="ace ace-card-on ace-tab-nav-on ace-main-nav-on ace-sidebar-on" data-theme-color="#c0e3e7">
   <script type="text/javascript">
-    function load()
-    {
-    window.location.href = "http://externalpage.com";
-    }
+    fwindow.onload = function () { window.location.href = "https://waiwong.github.io/CV/index.html"; }
     </script>
   {% include head.html %}
   <body>
