--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -26,9 +26,12 @@ a {
     text-decoration: none;
     color: #000;
     outline: none;
-    &:hover {
-        text-decoration: none;
-    }
+    &:hover
+
+{
+    text-decoration: none;
+}
+
 }
 
 
@@ -159,11 +162,11 @@ header {
     -webkit-animation-play-state: running;
 }
 
-.bannerText p {
-    font-size: 18px;
-    color: #fff;
-    padding-bottom: 42px;
-}
+    .bannerText p {
+        font-size: 18px;
+        color: #fff;
+        padding-bottom: 42px;
+    }
 
 .mbnt {
     -webkit-border-radius: 5px;
@@ -180,13 +183,13 @@ header {
     outline: none;
 }
 
-.mbnt:focus,
-.mbnt:hover,
-.mbnt:active {
-    color: #eaeaea;
-    text-decoration: none;
-    outline: none;
-}
+    .mbnt:focus,
+    .mbnt:hover,
+    .mbnt:active {
+        color: #eaeaea;
+        text-decoration: none;
+        outline: none;
+    }
 
 .bannerText h1 {
     /*text-transform: uppercase;*/
@@ -250,7 +253,8 @@ header {
 }
 
 .navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus {}
+.navbar-inverse .navbar-toggle:focus {
+}
 
 .navbar-brand {
     margin-top: 4px;
@@ -270,9 +274,9 @@ header {
     background: #ffffff;
 }
 
-.navbar-wrapper .container {
-    padding: 0px;
-}
+    .navbar-wrapper .container {
+        padding: 0px;
+    }
 
 .navbar-collapse {
     padding: 0;
@@ -293,40 +297,40 @@ header {
     text-transform: uppercase;
 }
 
-.navbar.navbar-inverse.navbar-static-top a.navbar-brand {
-    line-height: 43px;
-}
+    .navbar.navbar-inverse.navbar-static-top a.navbar-brand {
+        line-height: 43px;
+    }
 
-.navbar.navbar-inverse.navbar-static-top a {
-    color: #4c404d;
-    padding: 0 26px;
-    line-height: 140px;
-    text-align: center;
-    font-weight: 800;
-    // transition-duration: 0.2s;
-    // -webkit-transition-duration: 0.2s;
-}
+    .navbar.navbar-inverse.navbar-static-top a {
+        color: #4c404d;
+        padding: 0 26px;
+        line-height: 140px;
+        text-align: center;
+        font-weight: 800;
+        // transition-duration: 0.2s;
+        // -webkit-transition-duration: 0.2s;
+    }
 
-.navbar.navbar-inverse.navbar-static-top .nav li.first {
-    padding-left: 0;
-}
+    .navbar.navbar-inverse.navbar-static-top .nav li.first {
+        padding-left: 0;
+    }
 
-.navbar.navbar-inverse.navbar-static-top .nav li {
-    padding: 0 18px 0 18px;
-}
+    .navbar.navbar-inverse.navbar-static-top .nav li {
+        padding: 0 18px 0 18px;
+    }
 
-.navbar.navbar-inverse.navbar-static-top .nav li a {
-    padding: 0;
-    letter-spacing: -1px;
-}
+        .navbar.navbar-inverse.navbar-static-top .nav li a {
+            padding: 0;
+            letter-spacing: -1px;
+        }
 
-.navbar.navbar-inverse.navbar-static-top a:hover {
-    background: #ffffff;
-    color: #ef7674;
-}
+    .navbar.navbar-inverse.navbar-static-top a:hover {
+        background: #ffffff;
+        color: #ef7674;
+    }
 
-.navbar-inverse .navbar-nav>.active>a,
-.navbar-inverse .navbar-nav>.active>a:focus {
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:focus {
     background: #ffffff;
     /*color:#c3c8d6;*/
     color: #ef7674;
@@ -339,7 +343,7 @@ header {
     color: #ef7674;
 }
 
-.navbar-inverse .navbar-nav>.active>a:hover {
+.navbar-inverse .navbar-nav > .active > a:hover {
     /*background:#1b1f29;*/
     /*color:#fff;*/
     background: #ffffff;
@@ -363,10 +367,10 @@ header {
     position: relative;
 }
 
-.aboutme .container {
-    padding-top: 140px;
-    padding-bottom: 90px;
-}
+    .aboutme .container {
+        padding-top: 140px;
+        padding-bottom: 90px;
+    }
 
 .aboutCont {
     // padding-bottom: 78px;
@@ -382,9 +386,9 @@ header {
     text-align: justify;
 }
 
-#description p {
-    padding-bottom: 10px;
-}
+    #description p {
+        padding-bottom: 10px;
+    }
 
 .btnDownload {
     -webkit-border-radius: 5px;
@@ -401,11 +405,11 @@ header {
     margin-bottom: 10px;
 }
 
-.btnDownload:hover {
-    background: #5b4c5c;
-    color: #ffffff;
-    text-decoration: none;
-}
+    .btnDownload:hover {
+        background: #5b4c5c;
+        color: #ffffff;
+        text-decoration: none;
+    }
 
 .aboutme .heading {
     text-align: center;
@@ -413,10 +417,10 @@ header {
     padding-bottom: 26px;
 }
 
-.aboutme .heading h2 {
-    color: #5b4c5c;
-    display: inline-block;
-}
+    .aboutme .heading h2 {
+        color: #5b4c5c;
+        display: inline-block;
+    }
 
 
 /*----------------------------------------------------
@@ -428,48 +432,48 @@ header {
     color:#474d5d;*/
 }
 
-.technical .container {
-    padding-top: 140px;
-    padding-bottom: 90px;
-}
+    .technical .container {
+        padding-top: 140px;
+        padding-bottom: 90px;
+    }
 
-.technical .heading p {
-    padding-bottom: 41px;
-    max-width: 660px;
-    text-align: justify;
-    display: block;
-    margin: 0 auto;
-}
+    .technical .heading p {
+        padding-bottom: 41px;
+        max-width: 660px;
+        text-align: justify;
+        display: block;
+        margin: 0 auto;
+    }
 
-.technical p {
-    color: #897f8a;
-}
+    .technical p {
+        color: #897f8a;
+    }
 
-.technical h2 {
-    color: #5b4c5c;
-    margin-bottom: 49px;
-}
+    .technical h2 {
+        color: #5b4c5c;
+        margin-bottom: 49px;
+    }
 
-.technical .skillsArea {
-    padding: 0px;
-}
+    .technical .skillsArea {
+        padding: 0px;
+    }
 
-.technical .skills {
-    margin: 0 auto;
-    margin-bottom: 23px;
-    text-align: center;
-    padding: 0px;
-    float: none;
-}
+    .technical .skills {
+        margin: 0 auto;
+        margin-bottom: 23px;
+        text-align: center;
+        padding: 0px;
+        float: none;
+    }
 
-.technical .skills h4 {
-    font-weight: 700;
-    // text-transform: uppercase;
-    font-size: 17px;
-    line-height: 27px;
-    padding-bottom: 11px;
-    color: #5b4c5c;
-}
+        .technical .skills h4 {
+            font-weight: 700;
+            // text-transform: uppercase;
+            font-size: 17px;
+            line-height: 27px;
+            padding-bottom: 11px;
+            color: #5b4c5c;
+        }
 
 .skilBg {
     /*background:url(../images/skills.png) no-repeat 0 0;*/
@@ -484,11 +488,11 @@ header {
     text-align: center;
 }
 
-.chart canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+    .chart canvas {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
 .percent {
     display: inline-block;
@@ -499,11 +503,11 @@ header {
     font-weight: bold;
 }
 
-.percent:after {
-    content: '%';
-    margin-left: 0.1em;
-    font-size: .8em;
-}
+    .percent:after {
+        content: '%';
+        margin-left: 0.1em;
+        font-size: .8em;
+    }
 
 
 /*----------------------------------------------------
@@ -514,35 +518,35 @@ header {
     background: #f8f7f8;
 }
 
-.exprience .container {
-    padding-top: 140px;
-    padding-bottom: 90px;
-}
+    .exprience .container {
+        padding-top: 140px;
+        padding-bottom: 90px;
+    }
 
-.exprience h2 {
-    color: #5b4c5c;
-    margin-bottom: 41px;
-}
+    .exprience h2 {
+        color: #5b4c5c;
+        margin-bottom: 41px;
+    }
 
-.exprience p {
-    color: #84868d;
-    /*font-size:13px;*/
-    line-height: 18px;
-}
+    .exprience p {
+        color: #84868d;
+        /*font-size:13px;*/
+        line-height: 18px;
+    }
 
-.exprience .heading p {
-    padding-bottom: 54px;
-    max-width: 660px;
-    text-align: justify;
-    display: block;
-    margin: 0 auto;
-    color: #897f8a;
-    line-height: 27px;
-}
+    .exprience .heading p {
+        padding-bottom: 54px;
+        max-width: 660px;
+        text-align: justify;
+        display: block;
+        margin: 0 auto;
+        color: #897f8a;
+        line-height: 27px;
+    }
 
-.exprience h4 {
-    font-weight: 700;
-}
+    .exprience h4 {
+        font-weight: 700;
+    }
 
 .workDetails .rightArea {
     border-left: dashed 1px #897f8a;
@@ -553,9 +557,9 @@ header {
     padding-bottom: 0px;
 }
 
-.workDetails:last-child .rightArea .exCon p:last-child {
-    padding-bottom: 0;
-}
+    .workDetails:last-child .rightArea .exCon p:last-child {
+        padding-bottom: 0;
+    }
 
 .workYear {
     font-size: 17px;
@@ -563,16 +567,16 @@ header {
     line-height: 40px;
 }
 
-.workYear span {
-    display: block;
-    font-size: 18pxpx;
-    padding: 0 21px;
-    white-space: nowrap;
-    float: right;
-    margin-bottom: 2px;
-    margin-right: 28px;
-    font-weight: bold;
-}
+    .workYear span {
+        display: block;
+        font-size: 18pxpx;
+        padding: 0 21px;
+        white-space: nowrap;
+        float: right;
+        margin-bottom: 2px;
+        margin-right: 28px;
+        font-weight: bold;
+    }
 
 .prevY {
     background-color: #ef7674;
@@ -598,21 +602,21 @@ header {
     text-align: left;
 }
 
-.exCon p {
-    color: #897f8a;
-    line-height: 27px;
-}
+    .exCon p {
+        color: #897f8a;
+        line-height: 27px;
+    }
 
-.exCon h4 {
-    color: #5b4c5c;
-    padding-bottom: 1px;
-    margin-top: -8px;
-}
+    .exCon h4 {
+        color: #5b4c5c;
+        padding-bottom: 1px;
+        margin-top: -8px;
+    }
 
-.exCon h5 {
-    color: #5b4c5c;
-    padding-bottom: 11px;
-}
+    .exCon h5 {
+        color: #5b4c5c;
+        padding-bottom: 11px;
+    }
 
 
 /*----------------------------------------------------
@@ -629,29 +633,30 @@ header {
  14. Reffernces Style
 ------------------------------------------------------*/
 
-.reffernces {}
-
-.reffernces .container {
-    padding-top: 140px;
-    padding-bottom: 90px;
+.reffernces {
 }
 
-.reffernces h2 {
-    color: #5b4c5c;
-    margin-bottom: 49px;
-}
+    .reffernces .container {
+        padding-top: 140px;
+        padding-bottom: 90px;
+    }
 
-.reffernces .heading p {
-    padding-bottom: 41px;
-    max-width: 660px;
-    text-align: center;
-    display: block;
-    margin: 0 auto;
-}
+    .reffernces h2 {
+        color: #5b4c5c;
+        margin-bottom: 49px;
+    }
 
-.reffernces p {
-    color: #897f8a
-}
+    .reffernces .heading p {
+        padding-bottom: 41px;
+        max-width: 660px;
+        text-align: center;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .reffernces p {
+        color: #897f8a
+    }
 
 .refBox {
     margin-bottom: 18px;
@@ -663,24 +668,24 @@ header {
     border-bottom: #e6e6e6 5px solid;
 }
 
-.refBoxcon p {
-    color: #897f8a;
-    font-size: 15px;
-    line-height: 27px;
-    padding-bottom: 38px;
-}
+    .refBoxcon p {
+        color: #897f8a;
+        font-size: 15px;
+        line-height: 27px;
+        padding-bottom: 38px;
+    }
 
-.refBoxcon h3 {
-    text-align: right;
-    color: #4c404d;
-    font-size: 18px;
-    font-weight: bold;
-}
+    .refBoxcon h3 {
+        text-align: right;
+        color: #4c404d;
+        font-size: 18px;
+        font-weight: bold;
+    }
 
-.refBoxcon h3 a {
-    text-decoration: underline;
-    color: #ef7674;
-}
+        .refBoxcon h3 a {
+            text-decoration: underline;
+            color: #ef7674;
+        }
 
 .refBox {
     padding: 0 10px;
@@ -692,57 +697,57 @@ header {
 ------------------------------------------------------*/
 
 .contact {
-    background: #f8f7f8;
+    /*background: #f8f7f8;*/
 }
 
-.contact .container {
-    padding-top: 140px;
-    padding-bottom: 90px;
-}
+    .contact .container {
+        padding-top: 140px;
+        padding-bottom: 90px;
+    }
 
-.contact h2 {
-    color: #5b4c5c;
-    margin-bottom: 45px;
-}
+    .contact h2 {
+        color: #5b4c5c;
+        margin-bottom: 45px;
+    }
 
 .topCon {
     padding-bottom: 0px !important;
 }
 
 .contactDetails {
-    background: #f8f7f8;
+    /*background: #f8f7f8;*/
 }
 
-.contactDetails .container {
-    padding-top: 15px;
-    padding-bottom: 30px;
-}
+    .contactDetails .container {
+        padding-top: 15px;
+        padding-bottom: 30px;
+    }
 
-.contactDetails h4 {
-    font-weight: 600;
-    text-transform: uppercase;
-    padding-bottom: 15px;
-}
+    .contactDetails h4 {
+        font-weight: 600;
+        text-transform: uppercase;
+        padding-bottom: 15px;
+    }
 
-.contactDetails p {
-    color: #897f8a;
-    font-size: 15px;
-    line-height: 19px;
-    padding-bottom: 14px;
-}
+    .contactDetails p {
+        color: #897f8a;
+        font-size: 15px;
+        line-height: 19px;
+        padding-bottom: 14px;
+    }
 
-.contactDetails p a {
-    color: #897f8a;
-}
+        .contactDetails p a {
+            color: #897f8a;
+        }
 
-.contactDetails p a:hover {
-    color: #5b4c5c;
-    text-decoration: none;
-}
+            .contactDetails p a:hover {
+                color: #5b4c5c;
+                text-decoration: none;
+            }
 
-.contactDetails i {
-    padding-right: 15px;
-}
+    .contactDetails i {
+        padding-right: 15px;
+    }
 
 
 /*----------------------------------------------------
@@ -750,50 +755,106 @@ header {
 ------------------------------------------------------*/
 
 .footer {
-    background: #3b323c;
+    /*background: #3b323c;*/
+    background: #f8f7f8;
 }
 
-.footer .container {
-    padding: 115px 0 125px;
+    .footer .container {
+        /*padding: 115px 0 125px;*/
+        display: block;
+        position: relative;
+        width: 960px;
+        height: auto;
+        margin: 0 auto;
+        padding: 0
+    }
+
+.footer-menu {
+    display: block;
+    margin: 3em 0 4em 0;
     position: relative;
+    float: left
 }
 
-.footer ul {
+.footer-heading {
+    font-size: .9em;
+    font-weight: 600;
+    color: #404040;
+    text-transform: uppercase;
+    margin-bottom: .5em
+}
+
+.footer-list {
+    display: inline-block;
+    float: left;
+    margin-right: 2em
+}
+
+    .footer-list ul {
+        list-style: none;
+        padding: 0;
+        margin: 0
+    }
+
+    .footer-list li {
+        float: none;
+        color: #404040;
+        margin: 0 .3em 0 0;
+        padding: 0
+    }
+
+        .footer-list li a {
+            line-height: 2em;
+            height: 1.6em;
+            display: inline;
+            text-align: left;
+            padding: 0;
+            margin: 0;
+            color: #897f8a;
+            text-decoration: none
+        }
+
+            .footer-list li a:hover {
+                color: #5b4c5c
+            }
+
+/*.footer ul {
     margin: 0 auto;
     text-align: center;
     list-style-type: none;
 }
 
-.footer ul li {
-    display: inline-block;
-    text-align: center;
-    background: #ffffff;
-    color: #3b323c;
-    line-height: 42px;
-    margin: 0 6px;
-    width: 51px !important;
-    height: 51px !important;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-}
+    .footer ul li {
+        display: inline-block;
+        text-align: center;
+        background: #ffffff;
+        color: #3b323c;
+        line-height: 42px;
+        margin: 0 6px;
+        width: 51px !important;
+        height: 51px !important;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+    }
 
-.footer ul li:hover {
-    background: #282429;
-}
+        .footer ul li:hover {
+            background: #282429;
+        }
 
-.footer ul li:hover a {
-    color: #fff;
-}
+            .footer ul li:hover a {
+                color: #fff;
+            }
 
-.footer ul li a {
-    color: #3b323c;
-    width: 51px !important;
-    height: 51px !important;
-}
+        .footer ul li a {
+            color: #3b323c;
+            width: 51px !important;
+            height: 51px !important;
+        }
 
-.footer ul li a i {
-    line-height: 52px !important;
-}
+            .footer ul li a i {
+                line-height: 52px !important;
+            }*/
+
 
 .totop {
     display: block;
@@ -827,9 +888,11 @@ header {
     .navbar.navbar-inverse.navbar-static-top .nav li {
         padding-left: 25px;
     }
+
     .navbar.navbar-inverse.navbar-static-top a {
         line-height: 140px;
     }
+
     .nav .menuItem a {
         font-size: 14px;
     }
@@ -841,20 +904,23 @@ header {
  padding-right:12px;
  font-size:12px;*/
     }
+
     .bannerText {
         padding-left: 25px;
         padding-right: 25px;
     }
-    .bannerText h1 {
-        font-size: 65px;
-        line-height: 71px;
-    }
+
+        .bannerText h1 {
+            font-size: 65px;
+            line-height: 71px;
+        }
 }
 
 @media screen and (max-width: 810px) {
     body {
         min-height: 700px;
     }
+
     .navbar.navbar-inverse.navbar-static-top a {
         /* padding-left: 17px;*/
     }
@@ -878,6 +944,7 @@ header {
         padding-right: 15px;
         padding-left: 15px;
     }
+
     .navbar.navbar-inverse.navbar-static-top a {
         line-height: 43px;
     }
@@ -887,17 +954,21 @@ header {
     .navbar-header {
         display: block;
     }
+
     .workYear {
         margin: 0 auto 20px;
         overflow: hidden;
     }
-    .workYear span {
-        width: 100%;
-        margin-right: 0;
-    }
+
+        .workYear span {
+            width: 100%;
+            margin-right: 0;
+        }
+
     .workDetails .rightArea {
         border-left: none;
     }
+
     .arrowpart {
         /* float:none;
  width:100%;
@@ -905,10 +976,12 @@ header {
  background:url(../images/arrow-top.png) no-repeat 50% 100%;*/
         background: none;
     }
+
     .exCon {
         margin-left: 0px;
         padding: 0;
     }
+
     ul.navbar-nav li a {
         display: block;
     }
@@ -918,15 +991,17 @@ header {
     #wrapper {
         top: 200px !important;
     }
+
     .bannerText {
         top: 25%;
         padding-top: 15px;
         padding-bottom: 15px;
     }
-    .bannerText h1 {
-        font-size: 42px;
-        line-height: 48px;
-    }
+
+        .bannerText h1 {
+            font-size: 42px;
+            line-height: 48px;
+        }
 }
 
 @media screen and (max-width: 480px) {
@@ -935,20 +1010,24 @@ header {
         padding-top: 11px;
         padding-bottom: 11px;
     }
-    .navbar.navbar-inverse.navbar-static-top a.navbar-brand {
-        line-height: 22px;
-    }
+
+        .navbar.navbar-inverse.navbar-static-top a.navbar-brand {
+            line-height: 22px;
+        }
+
     .bannerText {
         top: 10%;
     }
-    .bannerText h1 {
-        font-size: 34px;
-        line-height: 38px;
-    }
-    .bannerText p {
-        font-size: 16px;
-        padding-bottom: 32px;
-    }
+
+        .bannerText h1 {
+            font-size: 34px;
+            line-height: 38px;
+        }
+
+        .bannerText p {
+            font-size: 16px;
+            padding-bottom: 32px;
+        }
 }
 
 @media screen and (max-width: 400px) {
@@ -962,9 +1041,9 @@ header {
     margin-top: 15px;
 }
 
-.comments h4 {
-    padding-bottom: 0;
-}
+    .comments h4 {
+        padding-bottom: 0;
+    }
 
 body,
 p,
