--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -755,8 +755,7 @@ header {
 ------------------------------------------------------*/
 
 .footer {
-    /*background: #3b323c;*/
-    background: #f8f7f8;
+    background: #FBFBEA;
 }
 
     .footer .container {
